Investigated extream runtimes in imdb.title.basic.csv

--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,12 +97,12 @@
     " * The variable `original_title` seems like it might encode the name of the original release of a movie that has been re-released. This may be most useful when the original title is in the original language of the movie.\n",
     " * The variable `start_year` ranges from 2010 to 2115, indicating that this column most likely needs to inspected more closely to identify malformed data.\n",
     " * The variable `runtime_minutes` ranges from 1 to 51420, indicating that this column most likely needs to inspected more closely to identify malformed data.\n",
-    " * The variable `genres` contains a comma separated list of applicable genres. We should is identify a list of unique genres and re-encode these lists as distinct indicator variables. "
+    " * The variable `genres` contains a comma separated list of applicable genres. We should identify a list of unique genres and re-encode these lists as distinct indicator variables. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -195,23 +195,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "title_basics_df = title_basics_df[title_basics_df['start_year']>2019]"
+    "cleaned_title_basics_df = title_basics_df.query('start_year <= 2019')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Dropping movies with extreme run times"
+    "#### Inspecting movies with extreme `runtime_minutes`\n",
+    "Manually verifying the runtime of a few of the longest movies in the list shows that these values are accurate. There is no need to clean this column. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -245,72 +246,259 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3669</th>\n",
-       "      <td>tt10356650</td>\n",
-       "      <td>Dream: The Life of Two Tales</td>\n",
-       "      <td>Dream: The Life of Two Tales</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>128.0</td>\n",
-       "      <td>Action,Comedy,Drama</td>\n",
+       "      <th>3918</th>\n",
+       "      <td>tt10374170</td>\n",
+       "      <td>Friends with Awkwardness</td>\n",
+       "      <td>Friends with Awkwardness</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>241.0</td>\n",
+       "      <td>Comedy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>81669</th>\n",
-       "      <td>tt4695264</td>\n",
-       "      <td>Lawrence: After Arabia</td>\n",
-       "      <td>Lawrence: After Arabia</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>126.0</td>\n",
-       "      <td>Drama</td>\n",
+       "      <th>118879</th>\n",
+       "      <td>tt7131170</td>\n",
+       "      <td>Rideshare</td>\n",
+       "      <td>Rideshare</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>242.0</td>\n",
+       "      <td>Horror,Thriller</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>127678</th>\n",
-       "      <td>tt7830722</td>\n",
-       "      <td>Rashna:The Ray of Light</td>\n",
-       "      <td>Rashna:The Ray of Light</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>Mystery,Thriller</td>\n",
+       "      <th>77066</th>\n",
+       "      <td>tt4417796</td>\n",
+       "      <td>Les choses et les mots de Mudimbe</td>\n",
+       "      <td>Les choses et les mots de Mudimbe</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>243.0</td>\n",
+       "      <td>Documentary</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>136826</th>\n",
-       "      <td>tt8741304</td>\n",
-       "      <td>Variance</td>\n",
-       "      <td>Variance</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>134.0</td>\n",
-       "      <td>Drama</td>\n",
+       "      <th>36099</th>\n",
+       "      <td>tt2321493</td>\n",
+       "      <td>Romanian Art Scene 2009-2011</td>\n",
+       "      <td>Romanian Art Scene 2009-2011</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>243.0</td>\n",
+       "      <td>Documentary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125405</th>\n",
+       "      <td>tt7639166</td>\n",
+       "      <td>Just Tell Her</td>\n",
+       "      <td>Just Tell Her</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>243.0</td>\n",
+       "      <td>Action</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88717</th>\n",
+       "      <td>tt5136218</td>\n",
+       "      <td>London EC1</td>\n",
+       "      <td>London EC1</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>5460.0</td>\n",
+       "      <td>Comedy,Drama,Mystery</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87264</th>\n",
+       "      <td>tt5068890</td>\n",
+       "      <td>Hunger!</td>\n",
+       "      <td>Hunger!</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>6000.0</td>\n",
+       "      <td>Documentary,Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123467</th>\n",
+       "      <td>tt7492094</td>\n",
+       "      <td>Nari</td>\n",
+       "      <td>Nari</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>6017.0</td>\n",
+       "      <td>Documentary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44840</th>\n",
+       "      <td>tt2659636</td>\n",
+       "      <td>Modern Times Forever</td>\n",
+       "      <td>Modern Times Forever</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>14400.0</td>\n",
+       "      <td>Documentary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132389</th>\n",
+       "      <td>tt8273150</td>\n",
+       "      <td>Logistics</td>\n",
+       "      <td>Logistics</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>51420.0</td>\n",
+       "      <td>Documentary</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>207 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            tconst                 primary_title  \\\n",
-       "3669    tt10356650  Dream: The Life of Two Tales   \n",
-       "81669    tt4695264        Lawrence: After Arabia   \n",
-       "127678   tt7830722       Rashna:The Ray of Light   \n",
-       "136826   tt8741304                      Variance   \n",
+       "            tconst                      primary_title  \\\n",
+       "3918    tt10374170           Friends with Awkwardness   \n",
+       "118879   tt7131170                          Rideshare   \n",
+       "77066    tt4417796  Les choses et les mots de Mudimbe   \n",
+       "36099    tt2321493       Romanian Art Scene 2009-2011   \n",
+       "125405   tt7639166                      Just Tell Her   \n",
+       "...            ...                                ...   \n",
+       "88717    tt5136218                         London EC1   \n",
+       "87264    tt5068890                            Hunger!   \n",
+       "123467   tt7492094                               Nari   \n",
+       "44840    tt2659636               Modern Times Forever   \n",
+       "132389   tt8273150                          Logistics   \n",
        "\n",
-       "                      original_title  start_year  runtime_minutes  \\\n",
-       "3669    Dream: The Life of Two Tales        2020            128.0   \n",
-       "81669         Lawrence: After Arabia        2020            126.0   \n",
-       "127678       Rashna:The Ray of Light        2020            150.0   \n",
-       "136826                      Variance        2020            134.0   \n",
+       "                           original_title  start_year  runtime_minutes  \\\n",
+       "3918             Friends with Awkwardness        2019            241.0   \n",
+       "118879                          Rideshare        2016            242.0   \n",
+       "77066   Les choses et les mots de Mudimbe        2015            243.0   \n",
+       "36099        Romanian Art Scene 2009-2011        2012            243.0   \n",
+       "125405                      Just Tell Her        2017            243.0   \n",
+       "...                                   ...         ...              ...   \n",
+       "88717                          London EC1        2015           5460.0   \n",
+       "87264                             Hunger!        2015           6000.0   \n",
+       "123467                               Nari        2017           6017.0   \n",
+       "44840                Modern Times Forever        2011          14400.0   \n",
+       "132389                          Logistics        2012          51420.0   \n",
        "\n",
-       "                     genres  \n",
-       "3669    Action,Comedy,Drama  \n",
-       "81669                 Drama  \n",
-       "127678     Mystery,Thriller  \n",
-       "136826                Drama  "
+       "                      genres  \n",
+       "3918                  Comedy  \n",
+       "118879       Horror,Thriller  \n",
+       "77066            Documentary  \n",
+       "36099            Documentary  \n",
+       "125405                Action  \n",
+       "...                      ...  \n",
+       "88717   Comedy,Drama,Mystery  \n",
+       "87264      Documentary,Drama  \n",
+       "123467           Documentary  \n",
+       "44840            Documentary  \n",
+       "132389           Documentary  \n",
+       "\n",
+       "[207 rows x 6 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "title_basics_df[title_basics_df['runtime_minutes']> 120]"
+    "title_basics_df.query('runtime_minutes > 240').sort_values('runtime_minutes')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Re-encoding the `genres` variable\n",
+    "We noticed that `genres` is a, potentially empty, list of applicable genres. Below we re-encode this data using indicator variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inspecting cleaned data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 30765 rows in this data frame.\n",
+      "\n",
+      "Column Names and Types:\n",
+      "\n",
+      "tconst              object\n",
+      "primary_title       object\n",
+      "original_title      object\n",
+      "start_year           int64\n",
+      "runtime_minutes    float64\n",
+      "genres              object\n",
+      "dtype: object \n",
+      "\n",
+      "The table below shows the number of missing values in each column:\n",
+      "\n",
+      "tconst                 0\n",
+      "primary_title          0\n",
+      "original_title        16\n",
+      "start_year             0\n",
+      "runtime_minutes    30765\n",
+      "genres              3188\n",
+      "dtype: int64 \n",
+      "\n",
+      "There are 30765 unique values in tconst. The first five are listed below:\n",
+      "\n",
+      "tt0069204\n",
+      "tt0112502\n",
+      "tt0139613\n",
+      "tt0187902\n",
+      "tt0250404\n",
+      "\n",
+      "\n",
+      "There are 30135 unique values in primary_title. The first five are listed below:\n",
+      "\n",
+      "Sabse Bada Sukh\n",
+      "Bigfoot\n",
+      "O Silêncio\n",
+      "How Huang Fei-hong Rescued the Orphan from the Tiger's Den\n",
+      "Godfather\n",
+      "\n",
+      "\n",
+      "There are 30149 unique values in original_title. The first five are listed below:\n",
+      "\n",
+      "Sabse Bada Sukh\n",
+      "Bigfoot\n",
+      "O Silêncio\n",
+      "How Huang Fei-hong Rescued the Orphan from the Tiger's Den\n",
+      "Godfather\n",
+      "\n",
+      "\n",
+      "The column start_year ranges between a minimum value of 2010 and a maximum value of 2019.\n",
+      "\n",
+      "The column runtime_minutes ranges between a minimum value of nan and a maximum value of nan.\n",
+      "\n",
+      "There are 573 unique values in genres. The first five are listed below:\n",
+      "\n",
+      "Comedy,Drama\n",
+      "Horror,Thriller\n",
+      "Documentary,History\n",
+      "nan\n",
+      "Crime,Drama\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "inspect_dataframe(cleaned_title_basics_df)"
    ]
   },
   {
@@ -329,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
