--- a/notebooks/moviesdb.ipynb
+++ b/notebooks/moviesdb.ipynb
@@ -21,8 +21,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_connection(cleaned_data_path):\n",
-    "    db_path = os.path.join(cleaned_data_path, 'movies.sqlite')\n",
+    "def get_connection(data_path):\n",
+    "    db_path = os.path.join(data_path, 'movies.sqlite')\n",
     "    conn = sqlite3.connect(db_path)\n",
     "    return conn"
    ]
@@ -44,8 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_data_path = '/home/schart/Flatiron/DataScience/Phase1/Project/Movie_Analysis/zippedData'\n",
-    "cleaned_data_path = '/home/schart/Flatiron/DataScience/Phase1/Project/Movie_Analysis/data/'"
+    "input_data_path = '/home/schart/Flatiron/DataScience/Phase1/Project/Movie_Analysis/zippedData'\n",
+    "data_path = '/home/schart/Flatiron/DataScience/Phase1/Project/Movie_Analysis/data/'"
    ]
   },
   {
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = get_connection(cleaned_data_path=cleaned_data_path)\n",
+    "conn = get_connection(data_path=data_path)\n",
     "cur = get_cursor(conn)"
    ]
   },
@@ -182,8 +182,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_file_path(raw_data_path, file_name):\n",
-    "    file_path = os.path.join(raw_data_path, file_name)\n",
+    "def get_file_path(input_data_path, file_name):\n",
+    "    file_path = os.path.join(input_data_path, file_name)\n",
     "    return file_path"
    ]
   },
@@ -239,7 +239,7 @@
    "outputs": [],
    "source": [
     "def read_title_basics(cur):\n",
-    "    file_path = get_file_path(raw_data_path=raw_data_path, file_name='imdb.title.basics.csv.gz')\n",
+    "    file_path = get_file_path(input_data_path=input_data_path, file_name='imdb.title.basics.csv.gz')\n",
     "    create_table_titles(cur=cur)\n",
     "    create_table_runtimes(cur=cur)\n",
     "    create_table_genres(cur=cur)\n",
@@ -289,7 +289,7 @@
    "outputs": [],
    "source": [
     "def read_title_ratings(cur):\n",
-    "    file_path = get_file_path(raw_data_path=raw_data_path, file_name='imdb.title.ratings.csv.gz')\n",
+    "    file_path = get_file_path(input_data_path=input_data_path, file_name='imdb.title.ratings.csv.gz')\n",
     "    create_table_ratings(cur=cur)\n",
     "    with gzip.open(file_path, mode='rt') as f:\n",
     "        reader = csv.DictReader(f)\n",
@@ -346,7 +346,7 @@
    "outputs": [],
    "source": [
     "def read_budgets(cur):\n",
-    "    file_path = get_file_path(raw_data_path=raw_data_path, file_name='tn.movie_budgets.csv.gz')\n",
+    "    file_path = get_file_path(input_data_path=input_data_path, file_name='tn.movie_budgets.csv.gz')\n",
     "    create_table_budgets(cur=cur)\n",
     "    with gzip.open(file_path, mode='rt') as f:\n",
     "        reader = csv.DictReader(f)\n",
