Extended database helper library

--- a/notebooks/moviesdb_testing.ipynb
+++ b/notebooks/moviesdb_testing.ipynb
@@ -2,19 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'moviesdb.moviesdb' from '/home/schart/Flatiron/DataScience/Phase1/Project/Movie_Analysis/notebooks/moviesdb/moviesdb.py'>"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from importlib import reload\n",
     "from moviesdb import moviesdb as mdb\n",
-    "reload(mdb);\n",
-    "db = mdb.MoviesDb()"
+    "reload(mdb)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tbp = mdb.TitleRatingsParser()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tbp.import_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db = mdb.MoviesDb()\n",
+    "df = db.load_table_as_df('ratings')\n",
+    "db.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -39,135 +78,61 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>tconst</th>\n",
-       "      <th>primary_title</th>\n",
-       "      <th>start_year</th>\n",
+       "      <th>averagerating</th>\n",
+       "      <th>numvotes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>tt0063540</td>\n",
-       "      <td>Sunghursh</td>\n",
-       "      <td>2013</td>\n",
+       "      <td>tt10356526</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>tt0066787</td>\n",
-       "      <td>One Day Before the Rainy Season</td>\n",
-       "      <td>2019</td>\n",
+       "      <td>tt10384606</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>559</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>tt0069049</td>\n",
-       "      <td>The Other Side of the Wind</td>\n",
-       "      <td>2018</td>\n",
+       "      <td>tt1042974</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>tt0069204</td>\n",
-       "      <td>Sabse Bada Sukh</td>\n",
-       "      <td>2018</td>\n",
+       "      <td>tt1043726</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>50352</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>tt0100275</td>\n",
-       "      <td>The Wandering Soap Opera</td>\n",
-       "      <td>2017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146139</th>\n",
-       "      <td>tt9916538</td>\n",
-       "      <td>Kuambil Lagi Hatiku</td>\n",
-       "      <td>2019</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146140</th>\n",
-       "      <td>tt9916622</td>\n",
-       "      <td>Rodolpho Teóphilo - O Legado de um Pioneiro</td>\n",
-       "      <td>2015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146141</th>\n",
-       "      <td>tt9916706</td>\n",
-       "      <td>Dankyavar Danka</td>\n",
-       "      <td>2013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146142</th>\n",
-       "      <td>tt9916730</td>\n",
-       "      <td>6 Gunn</td>\n",
-       "      <td>2017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146143</th>\n",
-       "      <td>tt9916754</td>\n",
-       "      <td>Chico Albuquerque - Revelações</td>\n",
-       "      <td>2013</td>\n",
+       "      <td>tt1060240</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>21</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>146144 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           tconst                                primary_title  start_year\n",
-       "0       tt0063540                                    Sunghursh        2013\n",
-       "1       tt0066787              One Day Before the Rainy Season        2019\n",
-       "2       tt0069049                   The Other Side of the Wind        2018\n",
-       "3       tt0069204                              Sabse Bada Sukh        2018\n",
-       "4       tt0100275                     The Wandering Soap Opera        2017\n",
-       "...           ...                                          ...         ...\n",
-       "146139  tt9916538                          Kuambil Lagi Hatiku        2019\n",
-       "146140  tt9916622  Rodolpho Teóphilo - O Legado de um Pioneiro        2015\n",
-       "146141  tt9916706                              Dankyavar Danka        2013\n",
-       "146142  tt9916730                                       6 Gunn        2017\n",
-       "146143  tt9916754               Chico Albuquerque - Revelações        2013\n",
-       "\n",
-       "[146144 rows x 3 columns]"
+       "       tconst  averagerating  numvotes\n",
+       "0  tt10356526            8.3        31\n",
+       "1  tt10384606            8.9       559\n",
+       "2   tt1042974            6.4        20\n",
+       "3   tt1043726            4.2     50352\n",
+       "4   tt1060240            6.5        21"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "db.load_table_as_df('titles')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['tconst', 'primary_title', 'start_year']"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "db.list_column_names('titles')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.close()"
+    "df.head()"
    ]
   },
   {
