Cleaned up question notebooks and figures.

--- a/notebooks/Question3.ipynb
+++ b/notebooks/Question3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Are there any genres that perform better in foreign markets?"
+    "# Question: Are there any genres that perform better in foreign markets?"
    ]
   },
   {
@@ -247,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Make visualization"
+    "## Data visualization"
    ]
   },
   {
@@ -301,11 +301,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Conclusion\n",
+    "We see that Animation, Adventure, and Action earn more foreign gross revenue. On the other hand, Non-fiction genres like Biography, Music, Documentary, and Sport tend to earn more Domestic gross revenue   "
+   ]
   }
  ],
  "metadata": {
