Fixed links in student.ipynb

--- a/student.ipynb
+++ b/student.ipynb
@@ -19,16 +19,16 @@
    "metadata": {},
    "source": [
     "## Data cleaning\n",
-    "Data was provided in the form of gzipped csv and tsv files which are located in the <a href='../tree/zippedData'>zippedData</a> folder. We processed data from the following files:\n",
+    "Data was provided in the form of gzipped csv and tsv files which are located in the <a href='./zippedData'>zippedData</a> folder. We processed data from the following files:\n",
     "* `imdb.title.basics.csv.gz`\n",
     "* `imdb.title.ratings.csv.gz`\n",
     "* `tn.movie_budgets.csv.gz`\n",
     "* `imdb.name.basics.csv.gz`\n",
     "* `imdb.title.principals.csv.gz`\n",
     "\n",
-    "I wrote a library called `moviesdb` located <a href = 'view/notebooks/moviesdb/moviesdb.py'>here</a> which provides classes  with methods to load data from the files above into a sqlite database. The library also provides a helper class called `MoviesDb` which provides methods for interacting with the database. \n",
+    "I wrote a library called `moviesdb` located <a href = './notebooks/moviesdb/moviesdb.py'>here</a> which provides classes  with methods to load data from the files above into a sqlite database. The library also provides a helper class called `MoviesDb` which provides methods for interacting with the database. \n",
     "\n",
-    "If the database is not already present, the script <a href='view/notebooks/makeMoviesDb.py'>makeMoviesDb.py</a> will build the database from the provided files.\n",
+    "If the database is not already present, the script <a href='./notebooks/makeMoviesDb.py'>makeMoviesDb.py</a> will build the database from the provided files.\n",
     "\n",
     "### Data transformations\n",
     "While most of the data was formatted appropriately, there were a few variables that required special attention. We highlight these variables below organized by input file.\n",
@@ -56,17 +56,24 @@
     "The questions below are answered in separate notebooks.\n",
     "\n",
     "### Question 1: What was the most common runtime?\n",
-    "Question notebook is located <a href='/notebooks/Question1.ipynb'>Here</a>\n",
+    "Question notebook is located <a href='./notebooks/Question1.ipynb'>Here</a>\n",
     "\n",
     "### Question 2: Which runtime produced the most ratings on IMDb?\n",
-    "Question notebook is located <a href='/notebooks/Question2.ipynb'>Here</a>\n",
+    "Question notebook is located <a href='./notebooks/Question2.ipynb'>Here</a>\n",
     "\n",
     "### Question 3: Which runtime produced the highest IMDb ratings?\n",
-    "Question notebook is located <a href='/notebooks/Question3.ipynb'>Here</a>\n",
+    "Question notebook is located <a href='./notebooks/Question3.ipynb'>Here</a>\n",
     "\n",
     "### Question 4: Which runtime produced the highest revenue?\n",
-    "Question notebook is located <a href='/notebooks/Question4.ipynb'>Here</a>"
+    "Question notebook is located <a href='./notebooks/Question4.ipynb'>Here</a>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
